fix: corrent the overflow and padding of elements in mobil view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,18 @@ body {
 .perspective {
   perspective: 1000px;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  scrollbar-gutter: stable;
+}
+
+img, video {
+  max-width: 100%;
+  height: auto;
+}
